--- a/src/contract-details.css
+++ b/src/contract-details.css
@@ -65,6 +65,12 @@ a {
   margin-bottom: 15px;
 }
 
+.addressHelper {
+  background-color: #F2F2F2;
+  border-radius: 50px;
+  padding: 8px 12px;
+}
+
 ul {
  padding: 5px;
 }
